Merge explorer and data orchestration perspective #5995 (#6055)
Fix tab move #4211
Add default methods to IHopPerspective interface
Normalize filename everywhere (tab tooltip, explorer copy path, monitor refresh...)
Add markdown icon

(cherry picked from commit b92a6966fc50796f99c21dd94b5eceeab5002636)